April 11, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * libpcsxcore/cdriso.c: Check the CRC value of subchannel after reading.

April 10, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * data/pcsx.glade2: Added "Memory Dump" to menu item. Added Memory Viewer
   dialog box. Added more info to About dialog box.
 * gui/Gtk2Gui.c: Likewise.
 * gui/DebugMemory.c: Implemented memory viewer/dumper.
 * gui/DebugMemory.h: Likewise.
 * gui/Makefile.am: Added DebugMemory.c.
 * gui/Cheat.c: Changed the order of OK/Cancel buttons for consistency with
   GNOME UI standards.
 * libpcsxcore/psxmem.c: Minor cleanup (thanks Sebun).
 * libpcsxcore/spu.c: Likewise.
 * libpcsxcore/cdrom.c: Check case open/close in CdlStop (courtesy of shalma).
 * plugins/peopsxgl/gpucfg/callbacks.c: Fixed warnings.
 * po/zh_CN.po, po/zh_TW.po, po/it.po, po/pt_BR.po, po/pcsx.pot: Updated.

March 21, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * libpcsxcore/mdec.c: Minor cleanup.

March 18, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * macosx/plugins/HIDInput/src/PlugPAD.c: Commented out calls to
   HIDCalibrateValue(), which caused problem in some cases.

March 17, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * macosx/plugins/HIDInput/HIDInput.xcodeproj/project.pbxproj: Fixed build
   issue.

March 16, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * po/it.po: Updated Italian translation by Giovanni Scafora.

March 15, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * libpcsxcore/mdec.c: 0x1f should be 31 rather than 15 (stupid /me).
 * po/it.po: Added Italian translation (Thanks Giovanni Scafora).
 * AUTHORS, po/LINGUAS, po/update-pot.sh: Updated.

March 14, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * libpcsxcore/mdec.c: Rewritten MDEC decoder to replace non-free code, also
   fixes image quality issues and improves decoding speed. (Thanks gorlik)
 * AUTHORS: Updated info.

March 12, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * gui/LnxMain.c: Fixed -cdfile switch (Thanks NeToU).